refactor: - Support relative map URLs - Add noOfCollections parameter to limit number of tested collections - Set connection and read timeout to avoid hanging on unresponsive map URLs